themes/reesepower/assets/scss/main.scss
@import url("https://fonts.googleapis.com/css?family=Rubik|Bitter");
@import "flexboxgrid";
@import "colors";
@import "typography";
@import "layout";
@import "base";

.tshirt-container {
  height: 100%;
  background-color: #f7f7f7;
}

nav {
  z-index: 1000;
}

@media(max-width: 48em) {
  body .container {
    padding: $vertical-rhythm * 2 $vertical-rhythm;
  }
  nav {
    // Hide menu links between logo and hamburger menu
    div:not(:first-child):not(:last-child) {
      display: none;
    }
    div.nav-toggle a {
      display: inline-block;
    }
  }
  .tshirt-container {
    height: auto;
  }
}
@media(max-width: 25em) {
  body .container {
    padding: $vertical-rhythm * 2 $vertical-rhythm;
    text-align: center;
  }
  nav {
    z-index: inherit;
    div.logo, div.nav-toggle {
      max-width: 50% !important;
    }
  }
  hr { 
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    width: 100%;
  }
  .tshirt-container {
    height: auto;
    background-color: #f7f7f7;
  }
}

nav {
  height: $vertical-rhythm * 3;
  width: 100%;
  background-color: #FFF;
  position: absolute;
  bottom: 0;
  text-align: center;
  box-shadow: 0 2px 2px rgba(0, 0, 0, .4 );
  h3 {
    margin: 0;
    font-family: $font-body;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
  }
  img {
    display: inline-block;
    max-width: 10em;
    max-height: $vertical-rhythm * 3 + .5;
    vertical-align: middle;
  }
  div.logo, div.nav-toggle {
    visibility: hidden;
    max-width: none;
  }
  .nav-toggle a {
    display: none;
  }
  .nav-icon img {
    max-height: $vertical-rhythm;
  }
}
.nav-fixed {
  position: fixed;
  top: 0;
  bottom: auto;
}
.nav-full {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100vw;
  right: -100vw;
  height: 100%;
  background-color: $black;
  transform: translate(0px, 0px);
  transition: 0.25s ease-out;
  a {
    color: #FFF;
    &:hover {
      color: $accent;
    }
  }
}
.nav-full.active {
  transform: translate(-100vw, 0px);
}
main {
  background-color: #fff;
  transform: translate(0px, 0px);
  transition: 0.25s ease-in;
}
main.active {
  transform: translate(-100vw, 0px);
}
.container {
  max-width: 64rem; // 700px
  padding: $vertical-rhythm * 2 0 $vertical-rhythm * 2;
  margin: auto;
}
p {
  margin-bottom: $vertical-rhythm;
  code {
    font-family: $font-code;
  }
}
h1, h2, h3 {
  font-family: $font-header;
  margin-top: $vertical-rhythm;
  letter-spacing: 2px;
  a {
    text-decoration: none;
  }
}

.posts-list {
  margin: 0 0 $vertical-rhythm;
}
.sub-header, time {
  @include size(p);
  color: $storm;
  margin-bottom: $vertical-rhythm;
}
.content {
  text-align: left;
  width: 100%;
  time {
    margin-left: 3px;
  }
  a {
    text-shadow: 0.03em 0 #fff,
    -0.03em 0 #fff,
    0 0.03em #fff,
    0 -0.03em #fff,
    0.06em 0 #fff,
    -0.06em 0 #fff,
    0.09em 0 #fff,
    -0.09em 0 #fff,
    0.12em 0 #fff,
    -0.12em 0 #fff,
    0.15em 0 #fff,
    -0.15em 0 #fff,
    0.03em 0.075em #fff,
    -0.03em 0.075em #fff,
    0.06em 0.075em #fff,
    -0.06em 0.075em #fff,
    0.09em 0.075em #fff,
    -0.09em 0.075em #fff,
    0.12em 0.075em #fff,
    -0.12em 0.075em #fff,
    0.15em 0.075em #fff,
    -0.15em 0.075em #fff;
    background-image: linear-gradient($accent,$accent);
    background-size: 1px 2px;
    background-repeat: repeat-x;
    background-position: 0 95%;
    text-decoration: none;
    &:hover {
      color: $accent;
    }
  }
}
.highlight {
  margin: 10px 0;
}
.pagination {
  margin: 50px 0 0;
  :nth-child(2) {
    float: right;
  }
}
.full {
  height: 100vh;
  top: 0;
  bottom: 0;
}
.about {
  width: 100%;
  background-color: $smoke;
  padding-bottom: $vertical-rhythm * 2;
  p {
    @include size(h3);
    margin-top: $vertical-rhythm;
  }
  a {
    text-shadow: 0.03em 0 #fff,
    -0.03em 0 #fff,
    0 0.03em #fff,
    0 -0.03em #fff,
    0.06em 0 #fff,
    -0.06em 0 #fff,
    0.09em 0 #fff,
    -0.09em 0 #fff,
    0.12em 0 #fff,
    -0.12em 0 #fff,
    0.15em 0 #fff,
    -0.15em 0 #fff,
    0.03em 0.075em #fff,
    -0.03em 0.075em #fff,
    0.06em 0.075em #fff,
    -0.06em 0.075em #fff,
    0.09em 0.075em #fff,
    -0.09em 0.075em #fff,
    0.12em 0.075em #fff,
    -0.12em 0.075em #fff,
    0.15em 0.075em #fff,
    -0.15em 0.075em #fff;
    background-image: linear-gradient($accent,$accent);
    background-size: 2px 3px;
    background-repeat: repeat-x;
    background-position: 0 95%;
    text-decoration: none;
    &:hover {
      color: $accent;
    }
  }
}
.event {
  hr { 
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
    width: 100%;
  }
  .event-row {
    padding-top: 20px;
    h2 {
      margin-top: 10px;
    }
    img {
      max-height: 200px;
      max-width: 200px;
      margin: 0 10px;
      float: left;

    }
    .event-date {
      font-size: 1.563rem;
    }
    .event-title {
      font-size: 1.953rem;
    }
    .event-description {
      padding: 0 15px;
    }
    .event-link {
      padding: 10px 15px;
      font-size: 18px;
    }
  }
}
.teammate {
  background-color: $smoke;

  .teammate-row {
    padding-bottom: 0;
    margin-bottom: 5px;
    margin-right: 10px;
    .teammate-name {
      float: left;
      font-size: 24px;
      font-weight: bold;
    }
    img {
      max-height: 200px;
      margin: 0 10px;
      float: right;
    }
    .teammate-link {
      padding: 8px 15px;
      font-size: 18px;
      float: right;
    }
  }
}
.gallery {
  div[class^="col-"], div[class*=" col-"] {
    padding: 0;
    position: relative;
    &:hover .overlay {
      opacity: 1;
    }
  }
  img {
    padding: $vertical-rhythm * 3;
  }
}
.overlay {
  cursor: pointer;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .2s ease-out;
  background-color: $black;
  a {
    color: #FFF;
    &:hover {
      color: $accent;
    }
  }
  h2 {
    color: #FFF;
  }
  h3 {
    font-family: $font-body;
  }
}
.blog {
  min-height: 100vh;
  h3 {
    margin: 0 0 $vertical-rhythm;
    font-family: $font-body;
  }
}

.contact {
  width: 100%;
  background-color: $smoke;
  padding-bottom: $vertical-rhythm * 2;

  form {
    margin-top: $vertical-rhythm;
  }

  .contact-submit {
    position: relative;
  }

  #form-submit {
    display: block;
    margin: 0 auto;
    width: 50%;
  }

  #form-thankyou {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

input {
  background-color: #FFF;
  border-color: $smoke;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  color: $black;
  padding: 10px;
  margin: 8px 0;
  width: 100%;
  &[type="submit"] {
    background-color: $storm;
    color: #FFF;
    transition: .2s ease-out;
    &:hover {
      background-color: $accent;
      color: #FFF;
      cursor: pointer;
    }
  }
}
textarea {
  @extend input;
  min-height: $vertical-rhythm * 4;
  overflow: auto;
}
footer {
  height: $vertical-rhythm * 6;
  background-color: $black;
  div, a {
    color: #FFF;
  }
}

